--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     
     <h2>Steps✨</h2>
 <ol>
-  <li>In a medium bowl, mix all your dry ingredients together (sugar and flour) </li>
-  <li>In a seperate mixing bowl mix all your wet ingredients (milk, cream, eggs, oil/butter and cocoa extract)</li>
-  <li>Mix dry and wet mixes together thouroughly + preheat oven to 325 degrees farenheit</li>
-  <li>Pour mix into your pan, lined with baking sheets and put in the oven and bake for 20 minutes</li>
+  <li>In a medium bowl, mix all your dry ingredients together (sugar and flour).</li>
+  <li>In a seperate mixing bowl mix all your wet ingredients (milk, cream, eggs, oil/butter and cocoa extract).</li>
+  <li>Mix dry and wet mixes together thouroughly + preheat oven to 325 degrees farenheit.</li>
+  <li>Pour mix into your pan, lined with baking sheets and put in the oven and bake for 20 minutes.</li>
   <li>Take out and carve a medium sized hole on the top, from that hole scoop out some cake inside, save the piece of cake you cut</li>
-  <li>Fill the hole you just made with peices of your chocolate bar</li>
-  <li>Put the piece of cake you cut off back on top and put cake back in the oven for another 5-10 minutes</li>
+  <li>Fill the hole you just made with peices of your chocolate bar.</li>
+  <li>Put the piece of cake you cut off back on top and put cake back in the oven for another 5-10 .</li>
 </ol>
 
     
